开启查看详细信息includeRaw: true  现在会捕获原始的AS-Path和 BGP属性了为后续的llm分析提供证据内容 FILE（日志提取）：通过 reportFile 将异常信息持久化，作为本地“故障日志集” 。 Controller 触发：通过 reportRest 将告警实时推送到 Python 脚本，触发大模型的 Thought-Action（思考-行动） 循环 。 降低 thresholdMinPeers 与频率限制：大模型相比硬编码规则具有更强的“抗噪能力”。通过降低阈值并关闭 alarmOnlyOnce，我们可以捕捉到异常的完整轨迹，这对于 RCAgent 这种需要“轨迹级聚合（TSC）”的架构至关重要 。

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,17 @@
 __pycache__/
 *.py[codz]
 *$py.class
+#specific file
+
+bgpalerter/bgpalerter-linux-x64
+bgpalerter/bgpalerter-linux-x64:Zone.Identifier
+bgpalerter/bgpalerter.pid
+bgpalerter/logs
+bgpalerter/cache
+
+
+
+
 
 # C extensions
 *.so
@@ -205,3 +216,4 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
