异常校验工具箱就绪（x5）

--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,12 @@ __pycache__/
 *.py[codz]
 *$py.class
 #specific file
+wandio-4.2.6-1
+libbgpstream-2.2.0
 
-bgpalerter/bgpalerter-linux-x64
-bgpalerter/bgpalerter-linux-x64:Zone.Identifier
-bgpalerter/bgpalerter.pid
-bgpalerter/logs
-bgpalerter/cache
-
-
-
+#data
+*.json
+*.jsonl
 
 
 # C extensions
